Invalid viewport meta width/height value should fall back to auto.

Currently invalid viewport meta width/height value fall back to 0.0.
But fall back to auto make more sense to developer.

Bug: 773653
Change-Id: I3a9243a171101cfdbd10f9f71c9fe7288b44d7c7
Reviewed-on: https://chromium-review.googlesource.com/713876
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Jianpeng Chao <chaopeng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508800}
Former-commit-id: 145660d6a05041e0da6a412598a29741b9efe816