third_party/WebKit/Source/core/page/ViewportTest.cpp
@@ -1092,10 +1092,10 @@ TEST_F(ViewportTest, viewport52) {
   Page* page = web_view_helper.WebView()->GetPage();
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
-  EXPECT_EQ(64, constraints.layout_size.Width());
-  EXPECT_NEAR(70.4, constraints.layout_size.Height(), 0.01f);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_EQ(980, constraints.layout_size.Width());
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01f);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -1112,7 +1112,7 @@ TEST_F(ViewportTest, viewport53) {
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
   EXPECT_EQ(980, constraints.layout_size.Width());
-  EXPECT_NEAR(70.4, constraints.layout_size.Height(), 0.01f);
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01f);
   EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
   EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
@@ -1130,10 +1130,10 @@ TEST_F(ViewportTest, viewport54) {
   Page* page = web_view_helper.WebView()->GetPage();
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
-  EXPECT_EQ(64, constraints.layout_size.Width());
-  EXPECT_NEAR(70.4, constraints.layout_size.Height(), 0.01f);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_EQ(980, constraints.layout_size.Width());
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01f);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -1149,10 +1149,10 @@ TEST_F(ViewportTest, viewport55) {
   Page* page = web_view_helper.WebView()->GetPage();
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
-  EXPECT_EQ(64, constraints.layout_size.Width());
-  EXPECT_NEAR(70.4, constraints.layout_size.Height(), 0.01f);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_EQ(980, constraints.layout_size.Width());
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01f);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -1681,10 +1681,10 @@ TEST_F(ViewportTest, viewport83) {
   Page* page = web_view_helper.WebView()->GetPage();
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
-  EXPECT_EQ(64, constraints.layout_size.Width());
-  EXPECT_NEAR(70.4, constraints.layout_size.Height(), 0.01f);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_EQ(980, constraints.layout_size.Width());
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01f);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -1700,10 +1700,10 @@ TEST_F(ViewportTest, viewport84) {
   Page* page = web_view_helper.WebView()->GetPage();
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
-  EXPECT_EQ(64, constraints.layout_size.Width());
+  EXPECT_EQ(980, constraints.layout_size.Width());
   EXPECT_EQ(480, constraints.layout_size.Height());
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -1757,10 +1757,10 @@ TEST_F(ViewportTest, viewport87) {
   Page* page = web_view_helper.WebView()->GetPage();
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
-  EXPECT_EQ(64, constraints.layout_size.Width());
-  EXPECT_NEAR(70.4, constraints.layout_size.Height(), 0.01f);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_EQ(980, constraints.layout_size.Width());
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01f);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -2213,10 +2213,10 @@ TEST_F(ViewportTest, viewport121) {
   Page* page = web_view_helper.WebView()->GetPage();
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
-  EXPECT_EQ(64, constraints.layout_size.Width());
-  EXPECT_NEAR(70.4, constraints.layout_size.Height(), 0.01f);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_EQ(980, constraints.layout_size.Width());
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01f);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -2232,10 +2232,10 @@ TEST_F(ViewportTest, viewport122) {
   Page* page = web_view_helper.WebView()->GetPage();
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
-  EXPECT_EQ(64, constraints.layout_size.Width());
-  EXPECT_NEAR(70.4, constraints.layout_size.Height(), 0.01f);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_EQ(980, constraints.layout_size.Width());
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01f);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -2289,10 +2289,10 @@ TEST_F(ViewportTest, viewport125) {
   Page* page = web_view_helper.WebView()->GetPage();
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
-  EXPECT_EQ(64, constraints.layout_size.Width());
-  EXPECT_NEAR(70.4, constraints.layout_size.Height(), 0.01f);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_EQ(980, constraints.layout_size.Width());
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01f);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -2308,10 +2308,10 @@ TEST_F(ViewportTest, viewport126) {
   Page* page = web_view_helper.WebView()->GetPage();
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
-  EXPECT_EQ(64, constraints.layout_size.Width());
-  EXPECT_NEAR(70.4, constraints.layout_size.Height(), 0.01f);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_EQ(980, constraints.layout_size.Width());
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01f);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -2327,10 +2327,10 @@ TEST_F(ViewportTest, viewport127) {
   Page* page = web_view_helper.WebView()->GetPage();
   PageScaleConstraints constraints = RunViewportTest(page, 320, 352);
 
-  EXPECT_EQ(64, constraints.layout_size.Width());
-  EXPECT_NEAR(70.4, constraints.layout_size.Height(), 0.01f);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_EQ(980, constraints.layout_size.Width());
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01f);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -3109,10 +3109,10 @@ TEST_F(ViewportTest, viewportWarnings3) {
       "been ignored.",
       web_frame_client.messages[0].text.Utf8().c_str());
 
-  EXPECT_NEAR(64.0f, constraints.layout_size.Width(), 0.01);
-  EXPECT_NEAR(70.4f, constraints.layout_size.Height(), 0.01);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_NEAR(980, constraints.layout_size.Width(), 0.01);
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
@@ -3196,10 +3196,10 @@ TEST_F(ViewportTest, viewportWarnings6) {
       "The value \"\" for key \"width\" is invalid, and has been ignored.",
       web_frame_client.messages[0].text.Utf8().c_str());
 
-  EXPECT_NEAR(64.0f, constraints.layout_size.Width(), 0.01);
-  EXPECT_NEAR(70.4f, constraints.layout_size.Height(), 0.01);
-  EXPECT_NEAR(5.0f, constraints.initial_scale, 0.01f);
-  EXPECT_NEAR(5.0f, constraints.minimum_scale, 0.01f);
+  EXPECT_NEAR(980, constraints.layout_size.Width(), 0.01);
+  EXPECT_NEAR(1078, constraints.layout_size.Height(), 0.01);
+  EXPECT_NEAR(0.33f, constraints.initial_scale, 0.01f);
+  EXPECT_NEAR(0.33f, constraints.minimum_scale, 0.01f);
   EXPECT_NEAR(5.0f, constraints.maximum_scale, 0.01f);
   EXPECT_TRUE(page->GetViewportDescription().user_zoom);
 }
